--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Fridge Finder</string>
+    <string name="saved_recipes">Saved Recipes</string>
+    <string name="app_title">Fridge Finder</string>
+    <string name="back">Back</string>
+    <string name="all_filters">All Filters</string>
+    <string name="menu">Menu</string>
+    <string name="search_saved_recipes">Search Saved Recipes</string>
+    <string name="scan_your_fridge">Scan your Fridge</string>
 </resources>
