make texture view take entire screen in scan camera activity; make camera icon prettier

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="menu">Menu</string>
     <string name="search_saved_recipes">Search Saved Recipes</string>
     <string name="scan_your_fridge">Scan your Fridge</string>
+    <string name="num_photos_left">0/10</string>
+    <string name="done_scanning">Done Scanning</string>
 </resources>
