Added feature to select photos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="review_photos">Review Photos</string>
     <string name="take_more_photos">Take More Photos</string>
     <string name="remove_image">Remove image</string>
+    <string name="upload_photo">Upload Photos</string>
 </resources>
